# api/docs/swagger.json
@@ -37,7 +37,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/database.Goal"
+                                                "$ref": "#/definitions/db.Goal"
                                             }
                                         }
                                     }
@@ -77,7 +77,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/database.Goal"
+                                            "$ref": "#/definitions/db.Goal"
                                         }
                                     }
                                 }
@@ -166,7 +166,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/database.Contribution"
+                                            "$ref": "#/definitions/db.Contribution"
                                         }
                                     }
                                 }
@@ -210,7 +210,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/database.Contribution"
+                                            "$ref": "#/definitions/db.Contribution"
                                         }
                                     }
                                 }
@@ -290,7 +290,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/database.Goal"
+                                            "$ref": "#/definitions/db.Goal"
                                         }
                                     }
                                 }
@@ -383,7 +383,7 @@
         }
     },
     "definitions": {
-        "database.Contribution": {
+        "db.Contribution": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -393,7 +393,7 @@
                     "type": "string"
                 },
                 "goal": {
-                    "$ref": "#/definitions/database.Goal"
+                    "$ref": "#/definitions/db.Goal"
                 },
                 "goal_id": {
                     "type": "integer"
@@ -406,7 +406,7 @@
                 }
             }
         },
-        "database.Goal": {
+        "db.Goal": {
             "type": "object",
             "properties": {
                 "goal_amount": {
